Bug 489958 - New Clear recent history dialog shows unnecessary scrollbars with details expanded, r=johnath
UltraBlame original commit: d6a2b89e5a0c22d43328174324e5ae550183f2b1

--- a/browser/themes/pinstripe/browser/sanitizeDialog.css
+++ b/browser/themes/pinstripe/browser/sanitizeDialog.css
@@ -85,6 +85,13 @@
 
 
 
+
+#itemList > listitem {
+  padding: 1px 0;
+}
+
+
+
 .prefWindow-dlgbuttons {
   -moz-margin-end: 0;
 }
